# salmon

./: .gitignore  Cargo.toml  build.rs  deny.toml
.test/: cache_test.json  invalid_affiliation.json  invalid_liver.json
protos/: salmon.proto
src/: ids.rs  logger.rs  main.rs  models.rs  repository.rs
src/entry/: cache.rs  config.rs  entry_objects.rs  mod.rs  request.rs  transport.rs
