[package]
name = "salmon"
version = "0.0.0-bleeding-edge"
edition = "2021"
build = "build.rs"
license = "AGPL-3.0-or-later"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_derive = "1.0.136"

yansi = "0.5.0"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.10", features = ["json", "stream"] }

tonic = { version = "0.6.1", features = ["tls", "compression"] }
prost = "0.9.0"
prost-types = "0.9.0"

anyhow = "1.0.56"
thiserror = "1.0.30"
regex = "1.5.5"
async-std = "1.11.0"
futures = "0.3.21"
dotenv = "0.15.0"
git2 = "0.14.0"
walkdir = "2"
once_cell = "1.10.0"
tokio = { version = "1.17.0", features = ["full"] }
void = "1.0.2"
tokio-cron-scheduler = "0.6.5"

[build-dependencies]
tonic-build = { version = "0.6.0", features = ["prost", "compression"] }